# sideloadr

./: .gitignore  Dockerfile  README.md  pyproject.toml
sideloadr/: __main__.py  constants.py
